--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VITE_CLOUD_NAME= "dexlsqpbv"
 VITE_UPLOAD_PRESET="eventapp"
 
 
-# VITE_STRIPE_KEY= // string publishable key
+# VITE_STRIPE_KEY= // string publishable 
 
 # cloud name = dexlsqpbv
 # api key = 471626348663492
